--- a/sass/email/03_organism/_o-wrapper.scss
+++ b/sass/email/03_organism/_o-wrapper.scss
@@ -1,3 +1,4 @@
 .o-wrapper {
     margin: 0 $standard-block-margin;
+    white-space: nowrap;
 }
